#163 new check box to use average rating instead of first minute rating